--- a/index.html
+++ b/index.html
@@ -115,20 +115,34 @@
   <button id="startBtn" class="btn btn-primary mb-3">Iniciar Jogo</button>
   <div id="timer">⏱️ Tempo: 0s</div>
 
-  <div id="introText" class="bg-light shadow-sm p-4 rounded border">
-    <p><strong>Desde os primórdios da humanidade</strong>, os parasitas têm sido companheiros invisíveis e implacáveis...</p>
-    <p>Ao longo dos séculos, parasitas como a <strong>malária</strong>...</p>
-    <p><strong>Como os Parasitas Transmitem Doenças?</strong> Muitos parasitas utilizam vetores...</p>
-    <p><strong>O Ataque Silencioso ao Nosso Corpo:</strong></p>
+   <div id="introText" class="d-flex justify-content-center mt-4">
+  <div class="bg-light shadow-sm p-4 rounded border" style="max-width: 900px; text-align: justify;">
+    <h4 class="fw-bold text-center mb-4">PARASITAS...</h4>
+    
+    <p>Desde os primórdios da humanidade, os parasitas têm sido companheiros invisíveis e implacáveis. Nossos ancestrais, sem o conhecimento científico de hoje, observavam os efeitos devastadores de doenças misteriosas, muitas das quais eram causadas por esses organismos sorrateiros. Relatos antigos, de civilizações como os egípcios e os romanos, já descreviam enfermidades que hoje reconhecemos como parasitoses. <strong>Papiro de Ebers</strong>, um texto médico egípcio de mais de 3.500 anos, menciona a presença de vermes intestinais, indicando que a luta contra esses invasores é tão antiga quanto a própria história humana.</p>
+
+    <p>Ao longo dos séculos, parasitas como a <strong>malária</strong>, a <strong>doença do sono</strong> e a <strong>esquistossomose</strong> moldaram o curso de civilizações, dizimando populações e influenciando migrações. Exércitos foram enfraquecidos, impérios caíram e a geografia da humanidade foi redesenhada pela ação silenciosa desses seres.</p>
+
+    <h5 class="mt-4 fw-bold">Como os Parasitas Transmitem Doenças?</h5>
+    <p>A transmissão de doenças parasitárias é um processo engenhoso e muitas vezes complexo. Muitos parasitas utilizam <strong>vetores</strong>, como mosquitos, carrapatos ou caramujos, para se moverem de um hospedeiro a outro. O mosquito <em>Anopheles</em>, por exemplo, ao picar uma pessoa infectada com malária, ingere os parasitas (<em>Plasmodium</em>) e, em seguida, os transmite para outra pessoa em uma picada subsequente.</p>
+
+    <p>Outros parasitas são transmitidos pela ingestão de água ou alimentos contaminados. A <strong>giardíase</strong>, por exemplo, é causada pela ingestão de cistos de <em>Giardia lamblia</em> presentes em água não tratada. O consumo de carne crua ou malcozida pode levar à infecção por tênias (<em>Taenia solium</em> ou <em>Taenia saginata</em>).</p>
+
+    <h5 class="mt-4 fw-bold">O Ataque Silencioso ao Nosso Corpo</h5>
     <ul>
-      <li><strong>Dano Direto:</strong> Ex: esquistossomose</li>
-      <li><strong>Competição por Nutrientes</strong></li>
-      <li><strong>Produção de Toxinas</strong></li>
-      <li><strong>Manipulação do Sistema Imunológico</strong></li>
-      <li><strong>Obstrução de Órgãos</strong></li>
+      <li><strong>Dano Direto aos Tecidos:</strong> Parasitas causam lesões ao se alimentar dos tecidos ou sangue.</li>
+      <li><strong>Competição por Nutrientes:</strong> Alguns absorvem nutrientes, levando à desnutrição.</li>
+      <li><strong>Produção de Toxinas:</strong> Alguns liberam toxinas que causam febre, dor ou inflamação.</li>
+      <li><strong>Manipulação do Sistema Imunológico:</strong> Parasitas conseguem enganar nossas defesas.</li>
+      <li><strong>Obstrução de Órgãos:</strong> Grandes infestações podem bloquear vasos ou intestinos.</li>
     </ul>
-    <p><strong>A batalha contra os parasitas é constante.</strong> Você está pronto para enfrentá-los no jogo?</p>
+
+    <p class="fw-semibold">A batalha contra os parasitas é constante, uma guerra invisível travada em cada célula do nosso corpo. Entender suas estratégias é o primeiro passo para vencê-los e garantir a sobrevivência da humanidade.</p>
+
+    <p class="text-primary text-center fw-bold">Você está pronto para enfrentar esses inimigos ocultos em seu jogo?</p>
   </div>
+</div>
+
 
   <div class="grid" id="gameBoard"></div>
   <div id="congrats"></div>
