--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
   <h2>🪱 Jogo da Memória: caçadores de parasitas 🪰</h2>
   <button id="startBtn" class="btn btn-primary mb-3">Iniciar Jogo</button>
   <div id="timer">⏱️ Tempo: 0s</div>
-
-   <div id="introText" class="d-flex justify-content-center mt-4">
+ <div id="introText" class="bg-light shadow-sm p-4 rounded border">
   <div class="bg-light shadow-sm p-4 rounded border" style="max-width: 900px; text-align: justify;">
     <h4 class="fw-bold text-center mb-4">PARASITAS...</h4>
     
